@@ -1,4 +1,3 @@
-set ANT_HOME=C:\Users\Alex\Desktop\Scoala\JavaApp\apache-ant-1.10.1
 set JRE_HOME=C:\Program Files\Java\jre-10.0.1
 set JAVA_HOME=c:\Program Files\Java\jdk-10.0.1
-%ANT_HOME%\bin\ant.bat %1
+java --add-modules java.corba -cp mods equation.iiop.c.EquationClient
